# pyspark_types

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-publish.yml
pyspark_types/: auxiliary.py  dataclass.py  pydantic.py
tests/: conftest.py  test_dataclass.py  test_pydantic.py
