[tool.poetry]
name = "pyspark-types"
version = "0.0.1"
description = "`pyspark_types` is a Python library that provides a simple way to map Python dataclasses to PySpark StructTypes"
authors = ["Dan"]
readme = "README.md"
packages = [{include = "pyspark_types"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"
pytest = "^7.2.1"
black = "^23.1.0"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
